# logbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: anomalies.csv
data/models/: isolation_forest_latest.joblib  isolation_forest_latest.meta.json
logbot/: main.py
logbot/agent/: guardrails.py  planner.py  prompts.py  state_machine.py  tools.py
logbot/api/: server.py
logbot/core/: config.py  logging.py
logbot/detection/: anomaly_detector.py  model_loader.py
logbot/retrieval/: embedder.py  preprocess.py  spark_pipeline.py  vector_store.py
scripts/: load_vector_store.py  run_pipeline.py
tests/: test_agent.py  test_api.py  test_tools.py  test_vector_store.py
