[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logbot"
version = "0.1.0"
description = "Production-grade LLM-powered log analysis and anomaly detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Nisha Mizhquiri" }
]
keywords = ["llm", "logs", "anomaly-detection", "agent", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog",
    "transformers",
    "sentence-transformers",
    "torch",
    "huggingface-hub",
    "accelerate",
    "chromadb",
    "faiss-cpu",
    "scikit-learn",
    "numpy",
    "scipy",
    "pandas",
    "pyspark",
    "prometheus-client",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[project.scripts]
logbot = "logbot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["logbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["logbot"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
